<resources>
    <string name="app_name">Fall Risk Assessment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fall_risk_assessment">Fall Risk Assessment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="patient_information">Patient Info</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="results">Results</string>
    <string name="physical_test">Physical Test</string>
    <string name="take_patient_survey">Take Patient Survey</string>
    <string name="see_patient_data">See Patient Data</string>
    <string name="start_test">Start Test</string>
    <string name="return_to_main_menu">Return to main menu</string>
    <string name="see_results">See Results</string>
    <string name="logout">Logout</string>
    <string name="_1_make_sure_you_are_in_a_clear_space">1. Make sure you are in a clear space</string>
    <string name="_2_place_phone_on_chest">2. Place phone on chest</string>
    <string name="_3_read_the_instructions_for_each_task">3. Read the instructions for each task</string>
    <string name="_4_press_start_tests_when_you_are_ready_to_start">4. Press Start Tests when you are ready to start</string>
    <string name="please_insert_your_age">Please insert your age:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="patient_survey">Patient Survey</string>
    <string name="please_select_your_gender">Please select your gender:</string>
    <string name="age">Age</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="both">Both</string>
    <string name="please_insert_your_height">Please insert your height.</string>
    <string name="feet">feet</string>
    <string name="inches">inches</string>
    <string name="weight">weight(lbs)</string>
    <string name="please_select_affected_body_side">Please select affected body side:</string>
    <string name="submit_survey">Submit Survey</string>
    <string name="have_you_experienced_a_fall_after_a_stroke_if_yes_how_many_times_have_you_fallen_in_the_last_6_months">Have you experienced a fall after a stroke? If yes, how many times have you fallen in the last 6 months?</string>
    <string name="confirm_leave">Are you sure you want to go back?</string>
    <string name="please_insert_your_weight">Please insert your weight</string>
    <string name="number_of_falls">Number of falls</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="are_there_many_traps_that_might_cause_a_fall_at_home">Are there many traps that might cause a fall at home?</string>
    <string name="do_you_use_a_walking_aid_on_a_regular_basis">Do you use a walking aid on a regular basis?</string>
    <string name="do_you_suffer_from_parkinson_s_arthritis_or_rheumatism">Do you suffer from Parkinson\'s, Arthritis, or Rheumatism?</string>
    <string name="do_you_have_loose_urine_or_pass_stool_involuntarily">Do you have loose urine or pass stool involuntarily?</string>
    <string name="do_you_take_medication_for_sleep_cardiac_problems_diuretics_or_sedative">Do you take medication for sleep, cardiac problems, diuretics, or sedative?</string>
    <string name="do_you_have_problems_with_hearing_or_vision">Do you have problems with hearing or vision?</string>
    <string name="clear_data">Clear Data</string>
    <string name="style">Style</string>
    <string name="about">About</string>
    <string name="app_version">App Version:</string>
    <string name="textview">TextView</string>
    <string name="developers">Developers:</string>
    <string name="todo">TODO</string>
    <string name="first_test">First Test</string>
    <string name="end_test">End Test</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="first_test_start">Started Test 1 Data Collection</string>
</resources>