<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.PatientSurvey">

    <ScrollView
        android:layout_width="342dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="16dp"
        android:scrollbarStyle="insideInset"
        app:layout_constraintBottom_toTopOf="@+id/button_submit_survey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/please_select_your_gender"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup_gender"
                android:layout_width="208dp"
                android:layout_height="49dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/please_insert_your_age"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="50dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/age"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/please_insert_your_height"
                android:textSize="18sp" />

            <RadioGroup
                android:layout_width="101dp"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextNumber2"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:hint="@string/feet"
                    android:inputType="number"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextNumber3"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:hint="@string/inches"
                    android:inputType="number"
                    android:textSize="14sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/please_insert_your_weight"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextNumber4"
                android:layout_width="80dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/weight"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/please_select_affected_body_side"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup_body_side"
                android:layout_width="236dp"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_right_body_side"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/right" />

                <RadioButton
                    android:id="@+id/radioButton_left_body_side"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/left" />

                <RadioButton
                    android:id="@+id/radioButton_both_body_side"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/both" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:text="@string/have_you_experienced_a_fall_after_a_stroke_if_yes_how_many_times_have_you_fallen_in_the_last_6_months"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextNumberOfFalls"
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:hint="@string/number_of_falls"
                android:inputType="number"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_you_take_medication_for_sleep_cardiac_problems_diuretics_or_sedative"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup_medication"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_t_medication"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioButton_f_problems"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_you_have_problems_with_hearing_or_vision"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup_problems_hearing"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_t_problems_hearing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioButton_f_problems_hearing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_you_have_loose_urine_or_pass_stool_involuntarily"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup_loose_urine"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_t_loose_urine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioButton_f_loose_urine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_you_suffer_from_parkinson_s_arthritis_or_rheumatism"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup_suffer"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_t_suffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioButton_f_suffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_you_use_a_walking_aid_on_a_regular_basis"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup_walking_aid"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_t_walking_aid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioButton_f_walking_aid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_there_many_traps_that_might_cause_a_fall_at_home"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup_traps_fall"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_t_traps_fall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/radioButton_f_traps_fall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/patient_survey"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_submit_survey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/submit_survey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>